[gd_scene load_steps=18 format=3 uid="uid://cvg1qyh60a1q5"]

[ext_resource type="Script" path="res://Scripts/npc_animation.gd" id="1_wn7nn"]
[ext_resource type="Script" path="res://Scripts/npc_dialogue_1.gd" id="2_cvog8"]
[ext_resource type="Theme" uid="uid://c7v8yvhp2wyqo" path="res://Tres/game_theme.tres" id="3_ur2ta"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/objects/DialogueBox.gd" id="4_qk0iy"]
[ext_resource type="Resource" uid="uid://j5jipuddfyew" path="res://Dialog/NPC_level4.tres" id="5_l158i"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/objects/bbcodeWait.gd" id="6_gbeqs"]
[ext_resource type="Texture2D" uid="uid://bhwicswjm07r" path="res://Sprites/play.png" id="7_qypsu"]
[ext_resource type="AudioStream" uid="uid://bkg35h8e0653s" path="res://Sounds/fish-two.mp3" id="8_av6oj"]
[ext_resource type="Texture2D" uid="uid://77d2y27ruobo" path="res://Sprites/characters/NPC1-sheet.png" id="9_rx1pv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xiwtc"]
size = Vector2(16, 17)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_swl3l"]
size = Vector2(22, 24)

[sub_resource type="RichTextEffect" id="RichTextEffect_lm54p"]
script = ExtResource("6_gbeqs")

[sub_resource type="AtlasTexture" id="AtlasTexture_krcxx"]
atlas = ExtResource("9_rx1pv")
region = Rect2(0, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_me3yc"]
atlas = ExtResource("9_rx1pv")
region = Rect2(60, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_1pnx1"]
atlas = ExtResource("9_rx1pv")
region = Rect2(0, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_b1e4h"]
atlas = ExtResource("9_rx1pv")
region = Rect2(60, 0, 60, 60)

[sub_resource type="SpriteFrames" id="SpriteFrames_uugng"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_krcxx")
}],
"loop": true,
"name": &"approach",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_me3yc")
}],
"loop": true,
"name": &"stand",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1pnx1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b1e4h")
}],
"loop": true,
"name": &"talk",
"speed": 5.0
}]

[node name="CharacterBody2D" type="CharacterBody2D"]
script = ExtResource("1_wn7nn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -0.5)
shape = SubResource("RectangleShape2D_xiwtc")

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource("2_cvog8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1, -1)
shape = SubResource("RectangleShape2D_swl3l")

[node name="CanvasLayer" type="CanvasLayer" parent="Area2D"]

[node name="DialogueBox" type="Panel" parent="Area2D/CanvasLayer"]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -142.0
offset_top = -105.0
offset_right = 178.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("3_ur2ta")
script = ExtResource("4_qk0iy")
data = ExtResource("5_l158i")
start_id = "START"
scroll_speed = 7
skip_input_action = "ui_down"
custom_effects = Array[RichTextEffect]([SubResource("RichTextEffect_lm54p")])
next_icon = ExtResource("7_qypsu")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Area2D"]
stream = ExtResource("8_av6oj")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1, -1)
scale = Vector2(0.238095, 0.25)
sprite_frames = SubResource("SpriteFrames_uugng")
animation = &"approach"

[connection signal="Close" from="Area2D" to="." method="_on_area_2d_close"]
[connection signal="Free" from="Area2D" to="." method="_on_area_2d_free"]
[connection signal="Talking" from="Area2D" to="." method="_on_area_2d_talking"]
[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_body_entered"]
[connection signal="body_exited" from="Area2D" to="Area2D" method="_on_body_exited"]
[connection signal="dialogue_ended" from="Area2D/CanvasLayer/DialogueBox" to="Area2D" method="_on_dialogue_box_dialogue_ended"]
